Library: Use auto-fill to avoid cell collapse
Using auto-fit collapses any implicitly created cells & stretches the cards
to take up any left over space, in case there is only one card, it will fill
the entire grid, we don't want that here.

Instead of setting fixed size on card, we can set auto-fill on our grid which
will make our grid cells not collapse, and create as many grid cells as it can

--- a/odin-javascript/odin-library/css/styles.css
+++ b/odin-javascript/odin-library/css/styles.css
@@ -134,7 +134,7 @@ button:active {
 .cards-container {
   gap: var(--gutter);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(var(--card-size), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(var(--card-size), 1fr));
 }
 
 /* ================ Cards ================ */
